# hyprnome

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
completions/: _hyprnome  hyprnome.bash  hyprnome.fish
hyprland/hyprland-macros/src/: lib.rs
hyprland/src/: lib.rs
hyprland/src/event_listener/: shared.rs
man/: hyprnome.1
src/: cli.rs  hyprland.rs  lib.rs  main.rs
tests/: get_next_id.rs  get_previous_id.rs  release.rs
