[package]
name = "hyprnome"
description = "GNOME-like workspace switching in Hyprland."
version = "0.3.1"
authors = ["Copyright (C) 2023-2024 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/hyprnome"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
hyprland = { git = "https://github.com/MrYuto/hyprland-rs" }

[build-dependencies]
clap = { version = "4.5.13", features = ["derive"] }
clap_complete = "4.5.13"
clap_mangen = "0.2.23"

[dev-dependencies]
assert_cmd = "2.0.14"
rustympkglib = "0.1.1"
serde = "1.0.205"
toml = "0.8.19"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
