[package]
name = "hyprnome"
description = "GNOME-like workspace switching in Hyprland."
version = "0.3.1"
authors = ["Copyright (C) 2023-2024 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/hyprnome"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
hyprland = "0.4.0-alpha.3"

[build-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.36"
clap_mangen = "0.2.24"

[dev-dependencies]
assert_cmd = "2.0.16"
rustympkglib = "0.1.1"
serde = "1.0.216"
toml = "0.8.19"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
